Closed Bug 1514488 Opened 5 years ago Closed 5 years ago

Crash in mozilla::ipc::FatalError | mozilla::ipc::IProtocol::HandleFatalError | mozilla::ipc::WriteIPDLParam<T>

Categories

(Toolkit :: Safe Browsing, defect, P1)

x86_64
Linux
defect

Tracking

()

RESOLVED FIXED
mozilla66
Tracking Status
firefox-esr60 --- unaffected
firefox64 --- unaffected
firefox65 --- unaffected
firefox66 --- fixed

People

(Reporter: jan, Assigned: dimi)

References

Details

(Keywords: crash, nightly-community, regression, Whiteboard: [qa-66b-p2])

Crash Data

Attachments

(1 file)

Happened when I restarted Nightly multiple times to reproduce bug 1514441. So is this a dupe?

This bug was filed from the Socorro interface and is
report bp-c8c7f095-f81b-489a-b602-992820181215.
=============================================================

Top 10 frames of crashing thread:

0 libxul.so mozilla::ipc::FatalError ipc/glue/ProtocolUtils.cpp:259
1 libxul.so mozilla::ipc::IProtocol::HandleFatalError const ipc/glue/ProtocolUtils.cpp:440
2 libxul.so void mozilla::ipc::WriteIPDLParam<mozilla::dom::PURLClassifierLocalParent*&> ipc/ipdl/PURLClassifierLocalParent.cpp:152
3 libxul.so mozilla::dom::PURLClassifierLocalParent::Send__delete__ ipc/ipdl/PURLClassifierLocalParent.cpp:50
4 libxul.so mozilla::dom::URLClassifierLocalParent::OnClassifyComplete dom/ipc/URLClassifierParent.cpp:161
5 libxul.so mozilla::detail::RunnableFunction<nsUrlClassifierDBService::AsyncClassifyLocalWithFeatures toolkit/components/url-classifier/nsUrlClassifierDBService.cpp:2872
6 libxul.so nsThread::ProcessNextEvent xpcom/threads/nsThread.cpp:1157
7 libxul.so NS_ProcessNextEvent xpcom/threads/nsThreadUtils.cpp:468
8 libxul.so mozilla::ipc::MessagePump::Run ipc/glue/MessagePump.cpp:88
9 libxul.so MessageLoop::Run ipc/chromium/src/base/message_loop.cc:314

=============================================================
Component: Safe Browsing → IPC
Product: Toolkit → Core
Let's see if the Safe Browsing team has any insight. Given the low crash rate I'm going to mark fix-optional for at least 64 for now.
Component: IPC → Safe Browsing
Flags: needinfo?(wleung)
Product: Core → Toolkit
Assignee: nobody → dlee
Status: NEW → ASSIGNED
Flags: needinfo?(wleung)
Priority: -- → P2
Priority: P2 → P1
The crash happens when parent process tries to send classify result to
the content process while the IPC connection is already closed.

The only case that we needs IPC for classification is for Flash classification, but flash
classification is moved to parent process after Bug 1514202.

Although right now there is no consumer for the IPC version of
nsUrlClassifierDBService::AsyncClassifyLocalWithFeatures, we should
still fix this bug.
Pushed by dlee@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/710ac2f726a1
Check if IPC still opens before sending classify result. r=baku
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla66

Please request Beta approval on this when you get a chance.

Flags: needinfo?(dlee)

(In reply to Ryan VanderMeulen [:RyanVM] from comment #5)

Please request Beta approval on this when you get a chance.

This is caused by Bug 1514202 so it should not affect beta.
From the crash report, other similar crashes happened before 66 are not the same as this one.

Flags: needinfo?(dlee)
Whiteboard: [qa-66b-p2]
You need to log in before you can comment on or make changes to this bug.