Bug 1514488 - Check if IPC still opens before sending classify result. r=baku

The crash happens when parent process tries to send classify result to
the content process while the IPC connection is already closed.

The only case that we needs IPC for classification is for Flash classification, but flash
classification is moved to parent process after Bug 1514202.

Although right now there is no consumer for the IPC version of
nsUrlClassifierDBService::AsyncClassifyLocalWithFeatures, we should
still fix this bug.

Differential Revision: https://phabricator.services.mozilla.com/D16362