dom/ipc/URLClassifierParent.cpp
@@ -161,18 +161,20 @@ mozilla::ipc::IPCResult URLClassifierLocalParent::StartClassify(
 NS_IMETHODIMP
 URLClassifierLocalParent::OnClassifyComplete(
     const nsTArray<RefPtr<nsIUrlClassifierFeatureResult>>& aResults) {
-  nsTArray<URLClassifierLocalResult> ipcResults;
-  for (nsIUrlClassifierFeatureResult* result : aResults) {
-    URLClassifierLocalResult* ipcResult = ipcResults.AppendElement();
+  if (mIPCOpen) {
+    nsTArray<URLClassifierLocalResult> ipcResults;
+    for (nsIUrlClassifierFeatureResult* result : aResults) {
+      URLClassifierLocalResult* ipcResult = ipcResults.AppendElement();
 
-    net::UrlClassifierFeatureResult* r =
-        static_cast<net::UrlClassifierFeatureResult*>(result);
+      net::UrlClassifierFeatureResult* r =
+          static_cast<net::UrlClassifierFeatureResult*>(result);
 
-    ipcResult->uri() = r->URI();
-    r->Feature()->GetName(ipcResult->featureName());
-    ipcResult->matchingList() = r->List();
+      ipcResult->uri() = r->URI();
+      r->Feature()->GetName(ipcResult->featureName());
+      ipcResult->matchingList() = r->List();
+    }
+
+    Unused << Send__delete__(this, ipcResults);
   }
-
-  Unused << Send__delete__(this, ipcResults);
   return NS_OK;
 }
